Add modified index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href="recipes/lemonChicken.html">Lemon Chicken Romano</a>
 </br>
     <a href="recipes/turkeyMeatballs.html">Gluten-free Turkey Meatballs</a>
+</br>
+    <a href="recipes/porkStirFry.html">Pork Stir Fry</a>
 </body>
 </html>
