Add ref to main page

--- a/recipes/lemonChicken.html
+++ b/recipes/lemonChicken.html
@@ -34,3 +34,5 @@
         <li>Bake in the preheated oven until chicken is no longer pink and the juices run clear, 6 to 8 minutes. An instant-read thermometer inserted into the center should read 165 degrees F (74 degrees C). Do not overcook.</li>
         <li>Remove from the oven, garnish with parsley, and serve with lemon wedges for spritzing.</li>
     </ol>
+<br>
+<a href="../index.html"><h3>Return to main page</h3></a>
