--- a/recipes/porkStirFry.html
+++ b/recipes/porkStirFry.html
@@ -27,3 +27,5 @@
         <li>Add remaining sesame oil to the wok; cook and stir red chile pepper and garlic in hot oil until sizzling, 15 to 30 seconds. Add onion and bell pepper; cook and stir until onion starts to soften, 2 to 3 minutes. Stir chopped bok choy stalks into onion mixture; cook and stir until stems begin to soften, about 3 minutes.</li>
         <li>Add broccoli to the wok; cook and stir until slightly softened, about 2 minutes. Add pork, chopped bok choy leaves, and soy sauce mixture; cook and stir until well-combined. Season pork mixture with ginger; cook and stir until bok choy leaves start to wilt and broccoli is tender, 5 to 7 minutes.</li>
     </ol>
+<br>
+<a href="../index.html"><h3>Return to main page</h3></a>
