--- a/recipes/turkeyMeatballs.html
+++ b/recipes/turkeyMeatballs.html
@@ -24,3 +24,5 @@
         <li>Combine ground turkey, chicken sausage, bread crumbs, basil, milk, garlic, Parmesan cheese, kosher salt, and black pepper in a bowl; mix gently with a fork. Drop mixture, about 1 1/4-inch diameter per meatball, onto the prepared baking sheet using a spoon.</li>
         <li>Bake in the preheated oven until cooked through and lightly browned, about 30 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
     </ol>
+<br>
+<a href="../index.html"><h3>Return to main page</h3></a>
