Add gordon and index

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/gordon.png" alt="Gordon">
+</br>
+<br>
+<h2>Check out my delish recipes!</h2>
     <a href="recipes/lemonChicken.html">Lemon Chicken Romano</a>
 </br>
     <a href="recipes/turkeyMeatballs.html">Gluten-free Turkey Meatballs</a>
 </br>
     <a href="recipes/porkStirFry.html">Pork Stir Fry</a>
+</br>
+    <p>Recipes are taken from <a href="https://www.allrecipes.com/">Allrecipes.com</a></p>
 </body>
 </html>
